--- a/overview/core-concepts/feature-overview.mdx
+++ b/overview/core-concepts/feature-overview.mdx
@@ -1,150 +1,131 @@
 ---
-title: "Quick Feature Overview"
-description: "Survey GoogleTest’s major features and see where to find deeper guidance. Includes quick explanations of test discovery, assertions, custom matchers, parameterized tests, mocking facilities, and configuration flexibility."
+title: "Feature Overview and Capabilities"
+description: "Get a quick, structured roundup of major features: xUnit architecture, automatic test discovery, rich assertions, death tests, parameterized and typed tests, mocking, and multi-platform support. Each feature is briefly described for rapid orientation."
 ---
 
-# Quick Feature Overview
+# Feature Overview and Capabilities
 
-Welcome to a concise survey of GoogleTest’s major features—your gateway to mastering efficient and effective C++ testing. This page guides you through the essentials: how tests are discovered, how assertions empower validation, the flexibility of parameterized and typed tests, mocking capabilities, and the powerful configuration options that put you in control.
+## Unlocking the Power of GoogleTest
 
----
+GoogleTest offers a comprehensive and robust C++ testing framework designed to make writing, running, and maintaining tests intuitive and efficient. This page provides a quick, structured overview of its key features, empowering you to understand what GoogleTest brings to your development workflow.
 
-## Test Discovery
-
-GoogleTest automatically discovers tests through its simple macros, such as `TEST()` and `TEST_F()`. You write tests in source files, and GoogleTest registers them so they run automatically when you invoke `RUN_ALL_TESTS()`.
-
-This automation frees you from manual enumeration of tests, ensuring every test you’ve written is executed. With this foundation, you can focus on writing tests rather than managing their execution.
-
-## Assertions
-
-At the heart of GoogleTest lie assertions—macros that check conditions in your test code and determine test success or failure.
-
-- `EXPECT_*` assertions report failures but allow the test to continue, helping identify multiple issues in a single run.
-- `ASSERT_*` assertions generate fatal failures, aborting the current test function to prevent further execution when continuing would be meaningless.
-
-These include equality checks, relational comparisons, string and floating-point verifications, and more. For example:
-
-```cpp
-EXPECT_EQ(actual, expected); 
-ASSERT_TRUE(condition);
-```
-
-Use assertions to precisely capture your expected behavior and gain informative failure messages, helping diagnose issues quickly.
-
-## Custom Matchers
-
-Take your assertions further with custom matchers that express complex expectations clearly. Custom matchers enable you to write expressive, reusable predicates that improve the readability and maintainability of your tests.
-
-## Parameterized and Typed Tests
-
-### Value-Parameterized Tests
-
-Want to test the same logic against multiple inputs? Value-parameterized tests let you write one test pattern and run it with various parameters.
-
-Define a fixture derived from `TestWithParam<T>`, write your tests with `TEST_P()`, and instantiate them with `INSTANTIATE_TEST_SUITE_P()`, providing parameter generators such as:
-
-- `Range(begin, end[, step])`
-- `Values(v1, v2, ..., vN)`
-- `ValuesIn(container)`
-- `Bool()` for boolean parameters
-- `Combine()` for Cartesian products of parameters
-
-Example:
-
-```cpp
-class FooTest : public testing::TestWithParam<int> {};
-
-TEST_P(FooTest, DoesBar) {
-  EXPECT_TRUE(DoSomething(GetParam()));
-}
-
-INSTANTIATE_TEST_SUITE_P(MyTests, FooTest, testing::Values(1, 2, 3));
-```
-
-This technique streamlines testing multiple scenarios without duplicating code.
-
-### Typed and Type-Parameterized Tests
-
-Typed tests run the same test logic over a fixed list of types. You define a class template fixture and associate it with a list of types using `TYPED_TEST_SUITE()`. Use `TYPED_TEST()` to write your tests once, and GoogleTest runs them for all specified types.
-
-Type-parameterized tests decouple test code from type list definition, allowing you to define abstract test suites that can be instantiated with different types later.
-
-Examples show how to easily verify interface compliance, test multiple implementations, and increase coverage with less code.
-
-## Mocking Facilities
-
-GoogleTest integrates tightly with GoogleMock, providing a powerful mocking framework. You can:
-
-- Define mock classes to simulate complex behaviors.
-- Specify expectations on mock method calls.
-- Use actions to define how mocks respond.
-
-This enables isolated unit testing by mimicking dependencies’ behaviors, ensuring tests are fast and focused.
-
-## Configuration Flexibility
-
-GoogleTest offers various flags and environment variables to tailor the test runner’s behavior:
-
-- Select specific tests by name pattern using `--gtest_filter`.
-- Run disabled tests with `--gtest_also_run_disabled_tests`.
-- Generate detailed XML or JSON reports for CI integration.
-- Fail fast on first error with `--gtest_fail_fast`.
-- Repeat tests, shuffle execution order, and control output formatting.
-
-These capabilities let you customize test execution to fit your workflow seamlessly.
-
-## Where to Find Deeper Guidance
-
-Each feature summarized here has dedicated documentation and examples for deeper exploration:
-
-- **Test Discovery and Execution:** See [GoogleTest Primer](primer.md).
-- **Assertions and Custom Matchers:** Explore [Assertions Reference](reference/assertions.md) and custom matchers guides.
-- **Typed and Parameterized Tests:** Detailed in [Advanced GoogleTest Topics](advanced.md) and [docs/primer.md](primer.md).
-- **Mocking:** Dive into [Mocking for Dummies](gmock_for_dummies.md), [Mocking Cookbook](gmock_cook_book.md), and [Mocking Cheat Sheet](gmock_cheat_sheet.md).
-- **Configuration:** Full flag listings in the [Advanced Guide](advanced.md).
-- **Samples:** Browse [GoogleTest Samples](samples.md) for practical code.
+### What You’ll Discover Here
+- The foundational xUnit architecture enabling structured and repeatable tests
+- Automatic test discovery to streamline your workflow
+- A rich set of assertion mechanisms that improve test clarity and diagnostics
+- Support for death tests to verify code that aborts under invalid conditions
+- Parameterized and typed tests allowing scalable test reuse across different inputs and types
+- Built-in mocking support via GoogleMock for isolating and verifying interactions
+- Cross-platform compatibility ensuring your tests run everywhere you develop
 
 ---
 
-<Info>
-Visit the [GoogleTest User's Guide](index.md) for a complete overview and navigation to all documentation sections.
-</Info>
+## Core Features & Capabilities
+
+### xUnit-Style Test Architecture
+GoogleTest adopts the widely embraced xUnit architectural style, fostering disciplined and modular test design.
+- Define test fixtures that group tests with shared setup and teardown logic
+- Create isolated test cases ensuring independence and reliable results
+- Leverage setup (`SetUp`) and teardown (`TearDown`) hooks for managing test state
+
+### Automatic Test Discovery
+Save time and reduce complexity: GoogleTest automatically discovers all tests in your binary without explicit registration, so running `RUN_ALL_TESTS()` executes everything.
+
+### Rich Assertions for Expressive Verification
+GoogleTest offers a powerful, comprehensive suite of assertions to express your test intent clearly:
+- Basic equality and relational checks (`EXPECT_EQ()`, `ASSERT_LT()`, etc.)
+- Predicate assertions for complex boolean logic with detailed failure messages
+- Floating-point comparisons with tolerance handling
+- Exception and death test assertions
+- Matcher-based assertions (`EXPECT_THAT`) that integrate with GoogleMock
+
+> _Example:_ To verify your function returns values within a tolerance:
+>
+> ```cpp
+> EXPECT_NEAR(calculated_value, expected_value, tolerance);
+> ```
+
+### Death Tests for Safe and Robust Code
+Test how your program behaves when it must abort due to invalid state or logic:
+- Verify that specific code paths terminate program execution safely
+- Support for different death test styles including thread-safe variants
+- Macros like `ASSERT_DEATH` and `EXPECT_DEATH` simplify writing death tests
+
+> _Example:_
+>
+> ```cpp
+> ASSERT_DEATH({ DoSomethingDangerous(); }, "Invalid argument");
+> ```
+
+### Parameterized and Typed Tests for Maximizing Coverage
+Write once, run multiple times across various inputs or types.
+- **Value-Parameterized Tests:** Pass different data values to the same test logic
+- **Typed Tests:** Run the same tests for multiple C++ types
+- **Type-Parameterized Tests:** Define tests generically and instantiate with types later
+
+This approach dramatically reduces code duplication and scales testing coverage.
+
+### Integrated Mocking with GoogleMock
+Isolate dependencies and validate interactions with GoogleMock:
+- Declarative syntax to define mock classes and methods
+- Supports partial mocks mixing real and mocked behavior
+- Rich matcher library for flexible argument verification
+- Control call expectations and ordering 
+- Extensible with custom matchers and actions
+
+This enables precise and meaningful unit tests by simulating collaborators.
+
+### Multi-Platform Support
+GoogleTest runs on all major operating systems and compilers you use in development.
+- Linux, Windows, MacOS
+- Compatible with GCC, Clang, MSVC, and others
+- Integrates smoothly with popular build systems like Bazel and CMake
 
 ---
 
-### Practical Tips
+## How These Features Benefit You
 
-- Use `EXPECT_*` for checks where multiple failures help identify issues; use `ASSERT_*` when continuation is unsafe.
-- Parameterize tests to scale coverage without code duplication.
-- Leverage `SCOPED_TRACE` to add context to failures within subroutines.
-- Customize test names in parameterized tests for clarity.
-- Register your own event listeners to customize output or tracking.
+GoogleTest’s capabilities translate directly into improved development efficiency:
 
-### Common Pitfalls
-
-- Avoid underscores in test suite and test names to prevent internal name mangling issues.
-- Don’t ignore the return value of `RUN_ALL_TESTS()` — it signals overall test success.
-- If your `SetUp()` is not called, check for spelling and casing errors.
+- **Automated Test Discovery:** Run all tests effortlessly and avoid manual registration errors
+- **Detailed Assertion Diagnostics:** Quickly pinpoint failures with expressive messages
+- **Death Tests:** Increase confidence in safety-critical code by testing failure modes
+- **Parameterized Tests:** Cover broad input ranges with minimal code
+- **Mocking Framework:** Enable isolated and deterministic tests of complex interactions
+- **Cross-Platform Consistency:** Ensure uniform testing behavior across your environments
 
 ---
 
-This quick overview equips you with essential knowledge to start harnessing GoogleTest effectively. For full mastery, embark on the journey through detailed guides and exemplars.
+## Getting Started Preview
+
+Begin exploring GoogleTest’s core concepts and workflows with these logical next steps:
+
+<Steps>
+<Step title="Learn Core Concepts and Terminology">
+Understand the basic building blocks and test model used by GoogleTest.
+</Step>
+<Step title="Write and Run Your First Tests">
+Try out simple test cases and assertions to get hands-on experience.
+</Step>
+<Step title="Explore Mocking Techniques">
+Dive into creating and using mocks with GoogleMock to isolate dependencies.
+</Step>
+</Steps>
+
+For detailed guides, see [GoogleTest Primer](https://google.github.io/googletest/primer.html) and the [Mocking for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) tutorial.
 
 ---
 
-## Code Example: Naming Parameterized Tests
+## Additional Resources
 
-```cpp
-class MyTest : public testing::TestWithParam<int> {};
+* [GoogleMock README](https://github.com/google/googletest/blob/main/googlemock/README.md) — Learn about GoogleMock’s mocking capabilities
+* [GoogleTest Advanced Topics](https://google.github.io/googletest/advanced.html) — Deep dive into advanced assertions and test patterns
+* [Mocking Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Tips for common mocking scenarios
+* [Mocking Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html) — Quick reference for matchers and actions
 
-TEST_P(MyTest, HandlesParameters) {
-  EXPECT_EQ(GetParam() % 2, 0);
-}
+---
 
-// Instantiate with values 2, 4, and 6
-INSTANTIATE_TEST_SUITE_P(EvenNumbers, MyTest, testing::Values(2, 4, 6));
-```
+## Summary
+You have now a high-level map of GoogleTest’s major features and capabilities. As you explore the documentation further, you’ll see how these features interlock to give you a powerful and flexible unit testing framework tailored for C++ development.
 
-This example shows how easy it is to reuse test logic with varied input values.
-
-# End of Quick Feature Overview
+Continue to the [Core Concepts and Terminology](../core-concepts/core-concepts-terminology.md) page to begin your journey into writing rigorous and maintainable tests.
