--- a/getting-started/prerequisites-installation/system-requirements.mdx
+++ b/getting-started/prerequisites-installation/system-requirements.mdx
@@ -1,194 +1,152 @@
 ---
 title: "System Requirements"
-description: "Covers supported operating systems, compiler/toolchain versions, and C++ standard requirements. Start here to confirm your environment compatibility and prepare your toolchain for GoogleTest and GoogleMock."
+description: "An overview of supported platforms, compilers, and C++ standards, aligning user expectations on what is needed to run GoogleTest and GoogleMock. Understand compatibility boundaries before you begin."
 ---
 
 # System Requirements
 
-Ensure your development environment is fully compatible before proceeding to install and use GoogleTest and GoogleMock. This page details the supported operating systems, compiler and toolchain versions, and C++ standard requirements necessary to build and run these frameworks successfully.
+GoogleTest and GoogleMock require a compatible development environment that supports modern C++17 standards and is built on platforms with reliable threading and compiler support. This page details the supported platforms, compilers, and C++ standards to ensure a smooth setup experience before you begin integrating these testing frameworks.
 
 ---
 
-## Supported Operating Systems
+## 1. Supported Operating Systems and Platforms
 
-GoogleTest and GoogleMock have been rigorously tested and are officially supported on the following platforms:
+GoogleTest follows Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support) and supports a wide range of platforms. Below are the primary platforms tested and supported:
 
-- **Linux** (including various distributions)
-- **Windows** (Desktop versions, including MSVC and MinGW builds)
-- **macOS**
+- **Windows** (including Desktop, MinGW, Windows Mobile, Windows Phone, and WinRT variations)
+- **Linux** (including Android)
+- **macOS** and **iOS**
+- **BSD Variants** (FreeBSD, OpenBSD, NetBSD, DragonFlyBSD)
+- **Solaris**
+- **AIX**
+- **QNX**
+- Other Unix-like platforms: GNU/Hurd, Haiku, Fuchsia
 
-Additionally, support extends to a variety of UNIX-like and BSD systems, including FreeBSD, OpenBSD, NetBSD, Solaris, and more, though these might see less frequent testing.
+GoogleTest also supports embedded platforms such as ESP8266, ESP32, Xtensa, and others, though with some limitations detailed in their respective documentation.
 
-### Detailed Platform Details
+> For the most current and detailed support matrix, visit [Supported Platforms Table](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md).
 
-| Platform            | Notes                                                             |
-|---------------------|-------------------------------------------------------------------|
-| Linux               | Full support, including Android (API level 9 or higher)           |
-| Windows Desktop     | Supported with MSVC 2017 Update 3 (and later) and MinGW           |
-| macOS               | Fully supported with Apple toolchains                             |
-| BSD Variants        | Support available but testing is less frequent                    |
-| Embedded/Mobile     | Limited or no support (e.g., Windows Mobile, Windows Phone, RT)   |
+---
 
+## 2. Compiler Requirements
 
-## Compiler and Toolchain Requirements
+GoogleTest requires a C++ compiler that fully supports **C++17** or later. The following compiler toolchains and versions are supported:
 
-### Minimum C++ Compiler Versions
+- **GCC**: version 7.0 or later
+- **Clang**: version 3.4.1 or later
+- **MSVC**: Visual Studio 2017 Update 3 (MSVC 19.11) or later
+- **Intel LLVM**: compatible versions supporting C++17
+- **SunPro**, **IBM VisualAge**, **HP aCC**, and other compilers with C++17 support
 
-GoogleTest and GoogleMock require a modern C++17 compatible compiler. Confirm your toolchain version meets or exceeds the following:
+### Notes:
 
-- **GCC:** Version 7.0 or later
-- **Clang:** Version 3.4 or later
-- **MSVC:** Visual Studio 2017 Update 3 (v19.11) or later
+- GoogleTest internally requires C++17 features; the project will fail to build with earlier standards.
+- The build uses `target_compile_features` in CMake to enforce C++17 standard.
+- For projects without native C++17, you can pass the standard flag manually (e.g., `-DCMAKE_CXX_STANDARD=17`) to your build system.
 
-> <Tip> Make sure your compiler’s C++ standard mode is set to C++17 or above. Setting this explicitly during build helps avoid compatibility issues. </Tip>
+---
 
-### C++ Standard
+## 3. Threading and Concurrency Support
 
-Your build environment must support at least **C++17**. GoogleTest verifies this requirement at compile time:
+GoogleTest depends on threading support for safe parallel test execution and features such as death tests.
 
-```cpp
-#if !defined(__cplusplus) || __cplusplus < 201703L
-#error "C++ versions less than C++17 are not supported."
-#endif
-```
+- When pthread support is available (on Linux, macOS, and Unix variants), GoogleTest enables multi-threaded safe operations automatically.
+- On Windows, native threading primitives are used.
+- For environments lacking pthread support or with limited threading capabilities (some embedded systems), GoogleTest can be configured to disable threading.
 
-If your project is using CMake, set this requirement with:
+### Important Build Flags Related to Threading:
 
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
+- `GTEST_HAS_PTHREAD`: Automatically detected or can be manually defined to toggle pthread usage.
+- `-DGTEST_HAS_PTHREAD=1` or `-DGTEST_HAS_PTHREAD=0` to force thread support on/off.
 
-Or pass appropriate flags to your compiler if not using CMake.
+The CMake build system includes auto-discovery of thread libraries and links them as needed.
 
-### Threading Support
+---
 
-GoogleTest is thread-safe on systems where pthreads are available. If your environment does not support pthreads, or automatic detection fails, you may need to manually enable or disable pthread usage by setting the macro `GTEST_HAS_PTHREAD`:
+## 4. C++ Standard and Build System Notes
 
-- Enable pthread support explicitly:
+### C++17 Requirement
 
+It is mandatory that your development environment supports C++17. You can ensure this by:
+
+- Setting `CMAKE_CXX_STANDARD` to `17` and `CMAKE_CXX_STANDARD_REQUIRED` to `ON` in your `CMakeLists.txt`.
+- Manually adding `-std=c++17` or an equivalent flag to your compiler options if you are not using CMake.
+
+### Build System Integration
+
+- **CMake** is the recommended build system for GoogleTest and GoogleMock. It supports multiple platforms and compilers in a unified way.
+- When using CMake, GoogleTest can be built as a standalone project or embedded into an existing project.
+- For Visual Studio users, GoogleTest supports out-of-the-box generation of project files and solutions compatible with MSVC.
+
+---
+
+## 5. Additional Compatibility Considerations
+
+### Runtime Libraries on Windows
+
+- By default, GoogleTest links the C runtime libraries statically (`/MT`), which can conflict with projects that use dynamic CRT (`/MD`).
+- You can override this behavior with the CMake option `gtest_force_shared_crt`:
+  
+  ```bash
+  cmake .. -Dgtest_force_shared_crt=ON
   ```
-  -DGTEST_HAS_PTHREAD=1
-  ```
 
-- Disable pthread support explicitly:
-
-  ```
-  -DGTEST_HAS_PTHREAD=0
-  ```
-
-If your build system uses CMake targets, linking with pthreads is usually handled automatically.
+This ensures GoogleTest uses dynamic runtime libraries compatible with your project.
 
 ### Exception and RTTI Support
 
-GoogleTest checks for the availability of exceptions and RTTI (Run-Time Type Information). While exceptions are optional, some features or user code may rely on them.
+- GoogleTest detects exception and RTTI support automatically.
+- It requires exception handling to be enabled for tests that rely on exceptions.
+- RTTI is used internally for features like typed tests and safe downcasting.
 
-Recommended to compile with exceptions enabled. RTTI usage depends on your compiler and build flags but is detected automatically.
-
----
-
-## File System and Stream Redirection
-
-GoogleTest requires file system support and the ability to redirect streams for some advanced features like death tests and output verification.
-
-- Most desktop and server OSes provide the required file system support.
-- On embedded or mobile platforms (e.g., Windows Mobile, some RT environments), these features may be limited.
-
-If file system features are missing, certain GoogleTest features will be disabled.
+If your compiler disables RTTI or exceptions, GoogleTest will attempt to work accordingly but some features may be unavailable.
 
 ---
 
-## Operating System Macros Used Internally
+## 6. Common Pitfalls and Tips
 
-GoogleTest automatically defines macros indicating the detected operating system, such as:
-
-- `GTEST_OS_WINDOWS`
-- `GTEST_OS_LINUX`
-- `GTEST_OS_MAC`
-
-Users generally do not need to set these manually but can rely on them for conditional compilation.
+- **Ensure your compiler fully supports C++17 before building GoogleTest.** Older compilers, even if they compile, may cause subtle runtime errors.
+- **Confirm threading support is detected correctly.** If you encounter linker errors related to `pthread`, define `-DGTEST_HAS_PTHREAD=0` to disable pthread or configure your build to link pthread libraries properly.
+- **Use the CMake build scripts whenever possible,** as they auto-configure compiler flags and system dependencies for you.
+- **For Windows users:** consider enabling `gtest_force_shared_crt` when your project uses dynamic CRT to avoid linkage errors.
 
 ---
 
-## Practical Tips for Environment Preparation
+## 7. Verifying Your Environment Compatibility
 
-- **Verify your compiler version:** Run `gcc --version`, `clang --version`, or check Visual Studio version before building.
-- **Ensure your build flags enable C++17:** Explicitly set your compiler to `-std=c++17` or equivalent.
-- **Use CMake for easy environment checks:** GoogleTest's CMake scripts handle many compatibility issues automatically.
-- **Check pthreads availability:** On Linux/macOS, pthreads is generally available; Windows uses native threading support.
-- **On Windows:** Pay attention to whether you need dynamic (DLL) or static runtime linkage and set `gtest_force_shared_crt` in CMake if needed.
+Run the following to check your compiler's C++ version:
 
----
+```bash
+${CXX} --version
+${CXX} -std=c++17 -dM -E - < /dev/null | grep __cplusplus
+```
 
-## Common Pitfalls
+Expected output should indicate a value `>= 201703L`.
 
-- Using an older compiler version without C++17 support causes immediate compilation failure.
-- Not setting the C++ standard mode explicitly, leading to subtle build errors.
-- Missing pthreads support or wrong `GTEST_HAS_PTHREAD` setting causes linking or runtime threading issues.
-- Building on unsupported or exotic platforms may disable some features (e.g., death tests).
+Use CMake's configuration step to verify that necessary threading libraries and features are detected:
 
----
+```bash
+cmake ..
+```
 
-## Troubleshooting
-
-<AccordionGroup title="Common System Requirements Issues">
-<Accordion title="C++17 Compliance Error">
-If you see a compile-time error about unsupported C++ versions, verify your compiler and build flags support C++17.
-
-- Confirm compiler version.
-- Set `-std=c++17` or equivalent in your build.
-</Accordion>
-<Accordion title="Pthread Not Detected">
-If you encounter linker errors related to pthread functions or thread safety issues:
-
-- Verify pthreads is installed.
-- Define `-DGTEST_HAS_PTHREAD=1` to force enable.
-- Link with pthreads (`-lpthread`).
-</Accordion>
-<Accordion title="Unsupported Platform Features">
-Features like death tests may be disabled if file system or stream redirection support is absent.
-
-- Check platform compatibility.
-- Consider alternative testing strategies if platform limitations exist.
-</Accordion>
-</AccordionGroup>
+Check output for lines indicating pthread or Windows threading usage.
 
 ---
 
-## Further Information
+## References and Next Steps
 
-- See [Install with CMake](/getting-started/prerequisites-installation/installation-cmake) for detailed build steps.
-- Consult the [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) for next steps in writing and running tests.
-- Review the [Integration & Ecosystem](/overview/architecture-features-integration/integration-overview) page to understand how GoogleTest fits with your build and CI system.
-
----
-
-## Summary Checklist Before You Build
-
-- [x] Operating system is supported (Linux, Windows Desktop, macOS)
-- [x] Compiler version supports C++17 or higher
-- [x] C++17 standard enabled in build flags
-- [x] Pthread libraries are available or `GTEST_HAS_PTHREAD` properly set
-- [x] File system and stream capabilities available for advanced tests
-- [x] Runtime linkage settings align with your project needs on Windows
-
-By verifying these requirements, you ensure a smooth build and execution of GoogleTest and GoogleMock on your development environment.
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html): Start writing tests after verifying your environment.
+- [Installation: CMake](./installation-cmake): Detailed instructions to install using CMake.
+- [Integration with Build Tools and CI](../overview/integration-ecosystem/integration-with-build-and-ci): How to integrate with continuous integration and other build systems.
+- [Troubleshooting Common Setup Issues](../getting-started/validation-troubleshooting/common-issues): Common errors and fixes during initial setup.
 
 ---
 
-_For full details on environment-specific macros and feature detection, see the [internal gtest-port.h source file](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h).
+<GetHelpSection>
+If you encounter issues preparing your environment or building GoogleTest:
 
----
-
-<Callout>
-For detailed build instructions, see the [Install with CMake](https://github.com/google/googletest/blob/main/googletest/README.md#generic-build-instructions) page.
-</Callout>
-
----
-
-## Related Documentation
-
-- [Setup and Installation with CMake](/getting-started/prerequisites-installation/installation-cmake)
-- [Writing and Running Your First Test](/getting-started/first-test-setup/writing-running-first-test)
-- [Integration & Ecosystem](/overview/architecture-features-integration/integration-overview)
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
+- Ensure you have the latest stable compiler matching the minimum versions.
+- Confirm CMake version is 3.14 or higher for full compatibility.
+- Review platform-specific quirks in [Platform Support](https://github.com/google/googletest/tree/main/docs/platforms.md).
+- Seek community support via GoogleTest forums or issue trackers.
+</GetHelpSection>
